2001-02-16  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (connect) Use SHA-1 hex digest for session
	identifiers.
	(_lists)  Add back end to allow the lists command to stall.
	Change version number to 0.1200102160.

	* lib/Mj/Confirm.pm:  (parse_passwords, parse_pw)  Convert clear
	text admin passwords to SHA-1 digests.

	* lib/Mj/Token.pm:  (validate_latchkey)  Removed.

	* lib/Mj/Util.pm:  (ep_convert, ep_recognize)  New routines to
	convert a clear text password to an SHA-1 digest, and to recognize
	an SHA-1 base 64 digest.

2001-02-14  Michael Yount <csf@moscow.com>

	* bin/mj_confirm, mj_wwwadm, mj_wwwusr:  Improve domain checking.
	Check the URL path, CGI parameters, and HTTP_HOST, in that order.
	Add "Expires" header (set to 10 seconds in the future) to avoid
	caching.  Thanks to Peter Ajamian and David Miller for the 
	suggestions.  Fix set command bug in mj_wwwusr.  Add a "Sign Out"
	button to mj_wwwadm and mj_wwwusr, which invalidates the 
	temporary password.

	* lib/Majordomo.pm:  Change version number to 0.1200102140.
	(dispatch) Improve mode validation: no modes over 11 characters
	in length are allowed.
	(legal_list_name)  Make this routine a function instead of an
	object method.

	* lib/Mj/Token.pm: (del_latchkey)  New routine.  Remove a 
	latchkey from the temporary password database.

2001-02-13  Michael Yount <csf@moscow.com>

	* files/en/help/admin*:  Revise and expand the introductory
	documents for list owners.

2001-02-11  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm: (_set) Return an error if a pattern was
	used and no matches were found.

	* lib/Mj/Access.pm: (_d_advertise) Revise the order of assessment
	for compatibility with Mj1.  The noadvertise patterns take
	precedence over the advertise patterns.

	* lib/Mj/Config.pm: (parse_inform) Move inform setting defaults
	out of the code and into the default configuration file.

2001-02-05  Michael Yount <csf@moscow.com>
